fix image in main section on small screen

--- a/src/scss/_homeMainSection.scss
+++ b/src/scss/_homeMainSection.scss
@@ -3,12 +3,20 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  height: 100vh;
-  background-image: url("../assets/box_image.png");
+  height: calc(100vh - 82px);
+  //background-image: url("../assets/box_image.png");
   background-repeat: no-repeat;
   background-position: left;
   background-size: auto;
   background-position-x: -48rem;
+  &::before{
+    content: " ";
+    position: absolute;
+    height: inherit;
+    width: 100%;
+    background-image: url("../assets/box_image.png");
+    background-repeat: no-repeat;
+  }
   &__right-col {
     display: flex;
     justify-content: flex-end;
@@ -38,12 +46,7 @@
   .main-section{
     margin-top: 0;
     &::before{
-      content: " ";
-      position: absolute;
-      background-color: rgba(255, 255, 255, 0.8);
-      height: 90rem;
-      width: 100%;
-      z-index: 0;
+      opacity: 0.3;
     }
     &__right-col{
       transform: translateX(0);
@@ -56,7 +59,7 @@
     height: 45rem;
 
     &::before{
-      height: 45rem;
+      background-position-x: 50%;
     }
     &__heading{
       font-size: 3rem;
